07/04/2004 autofs-4.1.2
-----------------------
- merge patches from Jeff Moyer.
   - Change (back) compile option -fpic -> -fPIC.
   - add code to recognise old LDAP master map format.
   - document limitation of direct mounts obscuring mount
     points in README.direct.
   - fix error in detecting duplicate master map entries
     in init script.
   - add check for automount base already mounted.
   - check for pie support and enable compile option if
     available.
   - corrections to init script including send HUP signal
     on reload.
- fix unchecked return from get_best_mount.
- add example file master map using LDAP.
- 1st attempt to deal with smb mounts that go away while
  mounted.
- updated kernel patches.

14/03/2004 autofs-4.1.1
-----------------------
- added CHANGELOG.
- fixed error in some ident tags.
- merge debian patch 032 document nonstrict special option.
- updated spec file to standardise paths etc.
- reintroduced some 4.0.0 init script code to help serialise
  shutdown signaling and umount of submounts. This should
  alieviate some of the contention for umount at shutdown.
- fix invalid path reference on error exit.
- merged debian patches.
   - 030 man page corrections in autofs(5) and automount(8).
   - 033 correct url in man page automount(8).
   - 034 correct mount call in mount_changer.c.
   - 040 document gid option in man page autofs(5).
- change fsck return code check.
   - still try to mount if fsck fails to run.
   - error only if fsck finds uncorrectable errors.
- fixed lookup problem with wildcard order in map.
- fixed lookup problem relating to directory tidyup.
- merge Jim Carters' buffer management and expire limit patch.
- remove make requirement for hesoid and ldap presence.
- add check for submount point itself busy.
   - requires autofs4 4.04 kernel module.
- added --verbode and --debug options to quieten daemon and
  provide ability to get debug output when needed. Default
  is produce no output except error messages.