@@ -1,3 +1,10 @@
+xx/xx/2004 autofs-4.1.3
+-----------------------
+- fixed bug processing --verbose option in init scripts.
+- added missing parameter in call to run fsck on ext2 module (from Jeff Moyer).
+- added check for executable existance in getldapmounts in init script.
+- updated comment about option handling in getmounts in init script.
+
 07/04/2004 autofs-4.1.2
 -----------------------
 - merge patches from Jeff Moyer.
